[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Art/Block Ninja/attack.PNG" type="Texture" id=2]
[ext_resource path="res://Art/Block Ninja/dead.PNG" type="Texture" id=3]
[ext_resource path="res://Components/Blood.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/SFX_Jump_09.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30, 30 )

[sub_resource type="Animation" id=2]

resource_name = "Die"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ 0.0, 91.3956 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Enemy" type="RigidBody2D" groups=[
"Enemy",
]]

input_pickable = true
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.1
angular_velocity = 0.0
angular_damp = 1.0
script = ExtResource( 1 )
flipped = false

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 0.35408, 0.863281, 0.552987, 1 )
texture = ExtResource( 2 )
flip_h = true
_sections_unfolded = [ "Animation", "Material", "Offset", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Die = SubResource( 2 )
anims/Idle = SubResource( 3 )
blend_times = [  ]

[node name="Blood" parent="." index="3" instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="ShootTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Sfx" type="Node2D" parent="." index="6"]

[node name="Throw" type="AudioStreamPlayer" parent="Sfx" index="0"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]


